--- a/1.md
+++ b/1.md
@@ -38,6 +38,8 @@ Artık `C:\Users\SeninkiAdi\Desktop\ReactNativeProjeler` klasöründesin.
 
 ```bash
 npx create-expo-app@latest ilk-uygulamam
+
+npx create-expo-app ilk-uygulamam --template blank
 ```
 
 ### Bu Komut Ne Yapıyor?
