--- a/4.md
+++ b/4.md
@@ -434,6 +434,116 @@ Görünüm:
 └────────────────┘
 ```
 
+```tsx
+
+import { View, Text, StyleSheet } from 'react-native';
+
+export default function Index() {
+  return (
+    <View style={styles.container}>
+      
+      {/* HEADER */}
+      <View style={styles.header}>
+        <View style={styles.headerLeft}>
+          <Text style={styles.text}>Sol</Text>
+        </View>
+        <View style={styles.headerRight}>
+          <Text style={styles.text}>Sağ</Text>
+        </View>
+      </View>
+
+      {/* CONTENT */}
+      <View style={styles.content}>
+        <View style={styles.contentLeft}>
+          <Text style={styles.text}>Sol</Text>
+        </View>
+        <View style={styles.contentMiddle}>
+          <Text style={styles.text}>orta</Text>
+        </View>
+        <View style={styles.contentRight}>
+          <Text style={styles.text}>Sağ</Text>
+        </View>
+      </View>
+
+      {/* FOOTER */}
+      <View style={styles.footer}>
+        <Text style={styles.text}>Footer (flex: 1)</Text>
+      </View>
+
+    </View>
+  );
+}
+
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+  },
+
+  header: {
+    flex: 1,
+    flexDirection: 'row',   // yan yana
+  },
+
+  headerLeft: {
+    flex: 1,                // eşit genişlik
+    backgroundColor: '#1abc9c',
+    justifyContent: 'center',
+    alignItems: 'center',
+  },
+
+  headerRight: {
+    flex: 1,                // eşit genişlik
+    backgroundColor: '#9b59b6',
+    justifyContent: 'center',
+    alignItems: 'center',
+  },
+
+  content: {
+     flex: 3,
+    flexDirection: 'row', 
+  },
+
+
+contentLeft: {
+    flex: 1,                // eşit genişlik
+    backgroundColor: '#ab0babff',
+    justifyContent: 'center',
+    alignItems: 'center',
+  },
+
+  contentRight: {
+    flex: 1,                // eşit genişlik
+    backgroundColor: '#77803aff',
+    justifyContent: 'center',
+    alignItems: 'center',
+  },
+
+ contentMiddle: {
+    flex: 1,                // eşit genişlik
+    backgroundColor: '#76aae5ff',
+    justifyContent: 'center',
+    alignItems: 'center',
+  },
+
+
+
+
+
+  footer: {
+    flex: 1,
+    backgroundColor: '#e74c3c',
+    justifyContent: 'center',
+    alignItems: 'center',
+  },
+
+  text: {
+    color: 'white',
+    fontSize: 18,
+  },
+});
+
+
+```
 ---
 
 ## 8. Yan Yana Elemanlar (Row Layout)
